feat(Layout, Bootstrap): Intégration d'un composant Squelette, utilisation des nouvelles fonctionnalités

--- a/front/src/app/layout/layout.component.html
+++ b/front/src/app/layout/layout.component.html
@@ -1,12 +1,12 @@
 <!-- layout.component.html -->
 <header>
-  <ng-content select="[layoutHeader]"></ng-content>
+
 </header>
 
 <main class="main-container">
-  <ng-content select="[layoutMain]"></ng-content>
+  <router-outlet></router-outlet>
 </main>
 
 <footer>
-  <ng-content select="[layoutFooter]"></ng-content>
+
 </footer>
