--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,8 +1,10 @@
-<div class="center">
-  <img src="/assets/logo_p6.png" alt="logo" />
 
-  <div id="action">
-    <button>Se connecter</button>
-    <button>S'inscrire</button>
+  <div class="center">
+    <img src="/assets/logo_p6.png" alt="logo" />
+
+    <div id="action">
+      <button (click)="goToLogin()">Se connecter</button>
+      <button (click)="goToRegister()">S'inscrire</button>
+    </div>
   </div>
-</div>
+
