feat(): Mise en place du header, avancement de la page register

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,10 +1,8 @@
+<div class="center-page">
+  <img src="/assets/logo_p6.png" alt="logo" />
 
-  <div class="center">
-    <img src="/assets/logo_p6.png" alt="logo" />
-
-    <div id="action">
-      <button (click)="goToLogin()">Se connecter</button>
-      <button (click)="goToRegister()">S'inscrire</button>
-    </div>
+  <div id="action">
+    <button (click)="goToLogin()">Se connecter</button>
+    <button (click)="goToRegister()">S'inscrire</button>
   </div>
-
+</div>
