--- a/front/src/app/layout/layout.component.html
+++ b/front/src/app/layout/layout.component.html
@@ -1,6 +1,11 @@
 <!-- layout.component.html -->
 <header>
-
+  <nav>
+    <div class="logo" (click)="goToHome()">
+      <img src="/assets/logo_p6.png" alt="logo" />
+    </div>
+    
+  </nav>
 </header>
 
 <main class="main-container">
