--- a/front/src/app/register/register.component.html
+++ b/front/src/app/register/register.component.html
@@ -1,1 +1,30 @@
-<p>register works!</p>
+<div class="center-page">
+    <h1>Inscription</h1>
+
+    <form>
+        <ul>
+            <li>
+                <div>
+                    <label for="name">Nom d'utilisateur</label>
+
+                </div>
+                <input type="text" id="username" name="user_username" />
+            </li>
+            <li>
+                <div>
+                    <label for="mail">Adresse e-mail</label>
+                </div>
+                <input type="email" id="mail" name="user_mail" />
+            </li>
+            <li>
+                <div>
+                    <label for="password">Mot de passe</label>
+                </div>
+                <input type="password" name="user_password"/>
+            </li>
+        </ul>
+        <div>
+            <button>S'inscrire</button>
+        </div>
+    </form>
+</div>
