style(home): appliquer le design final

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <img src="/assets/logo_p6.png" alt="logo" />
 
   <div id="action">
-    <button (click)="goToLogin()">Se connecter</button>
-    <button (click)="goToRegister()">S'inscrire</button>
+    <button id="login-btn" class="reset-button" (click)="goToLogin()">Se connecter</button>
+    <button id="register-btn" class="reset-button" (click)="goToRegister()">S'inscrire</button>
   </div>
 </div>
