--- a/front/src/app/home/home.component.scss
+++ b/front/src/app/home/home.component.scss
@@ -1,13 +1,5 @@
 @import "./../../styles/styles.scss";
 
-.center {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
 #action {
   display: flex;
   width: 100%;
@@ -17,32 +9,30 @@
   gap: 3vw;
 }
 
-button {
-  background: none;
-  color: inherit;
-  border: 1px solid;
+#register-btn,
+#login-btn {
+  border: 1px solid; 
   border-radius: 8px;
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 10px;
   padding-bottom: 10px;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
 }
-
 
 @media (max-width: $breakpoint-mobile) {
   img {
     width: 100%;
+    margin-top: 10vh;
+    margin-bottom: 5vh;
   }
+
   #action {
     flex-direction: column;
     width: auto;
     gap: 3vh;
   }
 
-  .center {
-    height: 60vh;
+  .center-page {
+    justify-content: flex-start;
   }
 }
