style(login): appliquer le design final

--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="center-page">
+    <h1>Se connecter</h1>
+
+    <form>
+        <ul class="reset-ul">
+            <li>
+                <div>
+                    <label for="mail">Adresse e-mail</label>
+                </div>
+                <input type="email" id="mail" name="user_mail" />
+            </li>
+            <li>
+                <div>
+                    <label for="password">Mot de passe</label>
+                </div>
+                <input type="password" name="user_password"/>
+            </li>
+        </ul>
+        <div class="center-button">
+            <button id="login-btn" class="reset-button">Se connecter</button>
+        </div>
+    </form>
+</div>
