style(register): appliquer le design final

--- a/front/src/app/register/register.component.html
+++ b/front/src/app/register/register.component.html
@@ -2,11 +2,10 @@
     <h1>Inscription</h1>
 
     <form>
-        <ul>
+        <ul class="reset-ul">
             <li>
                 <div>
                     <label for="name">Nom d'utilisateur</label>
-
                 </div>
                 <input type="text" id="username" name="user_username" />
             </li>
@@ -23,8 +22,8 @@
                 <input type="password" name="user_password"/>
             </li>
         </ul>
-        <div>
-            <button>S'inscrire</button>
+        <div class="center-button">
+            <button id="register-btn" class="reset-button" >S'inscrire</button>
         </div>
     </form>
 </div>
