--- a/front/src/app/register/register.component.scss
+++ b/front/src/app/register/register.component.scss
@@ -3,11 +3,34 @@
 ul {
     display: flex;
     flex-direction: column;
-    list-style: none;
-    padding: 0;
+    gap: 1vh;
 }
 
-input {
-    border-radius: 6px;
-    border: 1px solid;
+.center-page {
+    justify-content: flex-start;
+}
+
+#register-btn {
+    background-color: #7763c5;
+    font-size: medium;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    color: white;
+    border-radius: 8px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+@media (max-width: $breakpoint-mobile) {
+    input{
+        width: 70vw;
+    }
+}
+
+@media (max-width: $breakpoint-tablette) {
+    input{
+        width: 70vw;
+    }
 }
