--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -1,13 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 $breakpoint-mobile: 600px;
+$breakpoint-tablette: 900px;
 
 .center-page {
-  height: 85vh;
+  height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-start;
   flex-direction: column;
+}
+
+.center-button {
+  display: flex;
+  justify-content: center;
+}
+
+.reset-button {
+  border: none;
+  background: none;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.reset-ul {
+  list-style: none;
+  padding: 0;
+}
+
+input {
+    border-radius: 6px;
+    border: 1px solid;
+    height: 3vh;
+    min-width: 20vw;
+}
+
+@media (max-width: $breakpoint-mobile) {
+  nav {
+    max-width: 100%;
+    padding: 0;
+  }
+}
+
+@media (max-width: $breakpoint-tablette) {
+
 }
