--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use "./variables.scss" as v;
 
 html,
 body {
@@ -10,9 +11,6 @@ body {
   padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
-$breakpoint-mobile: 600px;
-$breakpoint-tablette: 900px;
 
 .center-page {
   height: 100vh;
@@ -48,13 +46,9 @@ input {
     min-width: 20vw;
 }
 
-@media (max-width: $breakpoint-mobile) {
+@media (max-width: v.$breakpoint-mobile) {
   nav {
     max-width: 100%;
     padding: 0;
   }
-}
-
-@media (max-width: $breakpoint-tablette) {
-
 }
