--- a/front/src/app/features/auth/login/login.component.html
+++ b/front/src/app/features/auth/login/login.component.html
@@ -1,19 +1,19 @@
 <div class="center-page">
     <h1>Se connecter</h1>
 
-    <form>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <ul class="reset-ul">
             <li>
                 <div>
                     <label for="mail">Adresse e-mail</label>
                 </div>
-                <input type="email" id="mail" name="user_mail" />
+                <input type="email" id="mail" name="user_mail" formControlName="email" />
             </li>
             <li>
                 <div>
                     <label for="password">Mot de passe</label>
                 </div>
-                <input type="password" name="user_password"/>
+                <input type="password" name="user_password" formControlName="password"/>
             </li>
         </ul>
         <div class="center-button">
