refactor(struct): Reorganisation de la structure des fichiers

--- a/front/src/app/features/home/home.component.scss
+++ b/front/src/app/features/home/home.component.scss
@@ -1,5 +1,5 @@
-@use "./../../../../styles/styles.scss" as *;
-@use "./../../../../styles/variables.scss" as v;
+@use "./../../../styles/styles.scss" as *;
+@use "./../../../styles/variables.scss" as v;
 
 #action {
   display: flex;
