styles(global): simplification

--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -25,7 +25,7 @@ body {
   justify-content: center;
 }
 
-.reset-button {
+button {
   border: none;
   background: none;
   color: inherit;
@@ -34,7 +34,7 @@ body {
   outline: inherit;
 }
 
-.reset-ul {
+ul {
   list-style: none;
   padding: 0;
 }
