--- a/front/src/app/features/layout/auth-layout/auth-layout.component.html
+++ b/front/src/app/features/layout/auth-layout/auth-layout.component.html
@@ -7,6 +7,7 @@
             <button class="logout">Se déconnecter</button>
             <button>Articles</button>
             <button>Thèmes</button>
+
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-circle-user-icon lucide-circle-user">
@@ -48,6 +49,15 @@
             <li><button><a href=""></a></button>Articles</li>
             <li><button><a href=""></a></button>Thèmes</li>
         </ul>
+        <div id="profil">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-circle-user-icon lucide-circle-user">
+                <circle cx="12" cy="12" r="10" />
+                <circle cx="12" cy="10" r="3" />
+                <path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662" />
+            </svg>
+        </div>
     </nav>
     }
     <router-outlet></router-outlet>
