--- a/front/src/app/features/layout/auth-layout/auth-layout.component.scss
+++ b/front/src/app/features/layout/auth-layout/auth-layout.component.scss
@@ -64,8 +64,8 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1050;
 }
@@ -79,11 +79,17 @@ img {
   height: 100%;
   background: white;
   box-shadow: -5px 0 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
   text-align: center;
   z-index: 1100;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+#profil {
+  display: flex;
+  justify-content: end;
+  margin: 1rem;
 }
 
 /* Bouton fermer */
