styles(app): le composant app prend désormais toute la hauteur de la balise html

--- a/front/src/app/features/layout/auth-layout/auth-layout.component.scss
+++ b/front/src/app/features/layout/auth-layout/auth-layout.component.scss
@@ -26,6 +26,10 @@ img {
   font-size: x-large;
 }
 
+.main-container {
+  height: 100%;
+}
+
 /* ======== BOUTON BURGER ======== */
 .burger {
   display: flex;
