refactor(styles): intégration d'une classe dédiée aux boutons violet

--- a/front/src/app/features/auth/login/login.component.html
+++ b/front/src/app/features/auth/login/login.component.html
@@ -17,7 +17,7 @@
             </li>
         </ul>
         <div class="center-button">
-            <button id="login-btn" class="reset-button">Se connecter</button>
+            <button class="violet-btn">Se connecter</button>
         </div>
     </form>
 </div>
