--- a/front/src/app/features/auth/register/register.component.html
+++ b/front/src/app/features/auth/register/register.component.html
@@ -23,7 +23,7 @@
             </li>
         </ul>
         <div class="center-button">
-            <button id="register-btn" class="reset-button" >S'inscrire</button>
+            <button class="violet-btn" >S'inscrire</button>
         </div>
     </form>
 </div>
