--- a/front/src/app/features/article/article.component.html
+++ b/front/src/app/features/article/article.component.html
@@ -1,1 +1,103 @@
-<p>article works!</p>
+<div id="tools">
+    <button class="violet-btn">
+        Créer un article
+    </button>
+
+    <div id="filter">
+        Trier par
+    </div>
+</div>
+
+<div id="articles">
+    <article>
+        <h3 class="title">Titre de l'article</h3>
+        <div class="detail">
+            <span>Date</span><span>Auteur</span>
+        </div>
+        <p class="content">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur harum fugiat facilis adipisci ipsam
+            odit rerum enim minus eius nihil ad expedita dolores ab cum suscipit, neque dolorum distinctio. Molestiae?
+            Temporibus possimus quas cupiditate cumque deserunt dicta in. Vero odio veniam iusto, beatae vitae quos
+            deleniti ad iure, porro cupiditate nam, esse dolorem cumque repellendus rerum deserunt incidunt velit
+            possimus!
+            Similique, pariatur dicta. Illum alias, sequi molestias, labore fugiat tempora amet cum harum, odit vitae
+            porro assumenda! Natus consectetur molestias temporibus, debitis fuga reprehenderit maxime deserunt non
+            corrupti, veritatis mollitia.
+            Fuga vero recusandae, a atque, maxime officiis odio quibusdam libero impedit alias amet tempora unde
+            necessitatibus numquam illum deleniti molestias quaerat architecto. Architecto consequuntur illo aspernatur
+            sequi magnam dolor rerum.
+            Animi sequi assumenda esse deserunt repellat temporibus tempora eius praesentium at, veniam inventore
+            mollitia eaque beatae odio ducimus eos consectetur eveniet saepe. Expedita, quam qui repellat ex obcaecati
+            quae animi?
+        </p>
+    </article>
+
+    <article>
+        <h3 class="title">Titre de l'article</h3>
+        <div class="detail">
+            <span>Date</span><span>Auteur</span>
+        </div>
+        <p class="content">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur harum fugiat facilis adipisci ipsam
+            odit rerum enim minus eius nihil ad expedita dolores ab cum suscipit, neque dolorum distinctio. Molestiae?
+            Temporibus possimus quas cupiditate cumque deserunt dicta in. Vero odio veniam iusto, beatae vitae quos
+            deleniti ad iure, porro cupiditate nam, esse dolorem cumque repellendus rerum deserunt incidunt velit
+            possimus!
+            Similique, pariatur dicta. Illum alias, sequi molestias, labore fugiat tempora amet cum harum, odit vitae
+            porro assumenda! Natus consectetur molestias temporibus, debitis fuga reprehenderit maxime deserunt non
+            corrupti, veritatis mollitia.
+            Fuga vero recusandae, a atque, maxime officiis odio quibusdam libero impedit alias amet tempora unde
+            necessitatibus numquam illum deleniti molestias quaerat architecto. Architecto consequuntur illo aspernatur
+            sequi magnam dolor rerum.
+            Animi sequi assumenda esse deserunt repellat temporibus tempora eius praesentium at, veniam inventore
+            mollitia eaque beatae odio ducimus eos consectetur eveniet saepe. Expedita, quam qui repellat ex obcaecati
+            quae animi?
+        </p>
+    </article>
+
+    <article>
+        <h3 class="title">Titre de l'article</h3>
+        <div class="detail">
+            <span>Date</span><span>Auteur</span>
+        </div>
+        <p class="content">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur harum fugiat facilis adipisci ipsam
+            odit rerum enim minus eius nihil ad expedita dolores ab cum suscipit, neque dolorum distinctio. Molestiae?
+            Temporibus possimus quas cupiditate cumque deserunt dicta in. Vero odio veniam iusto, beatae vitae quos
+            deleniti ad iure, porro cupiditate nam, esse dolorem cumque repellendus rerum deserunt incidunt velit
+            possimus!
+            Similique, pariatur dicta. Illum alias, sequi molestias, labore fugiat tempora amet cum harum, odit vitae
+            porro assumenda! Natus consectetur molestias temporibus, debitis fuga reprehenderit maxime deserunt non
+            corrupti, veritatis mollitia.
+            Fuga vero recusandae, a atque, maxime officiis odio quibusdam libero impedit alias amet tempora unde
+            necessitatibus numquam illum deleniti molestias quaerat architecto. Architecto consequuntur illo aspernatur
+            sequi magnam dolor rerum.
+            Animi sequi assumenda esse deserunt repellat temporibus tempora eius praesentium at, veniam inventore
+            mollitia eaque beatae odio ducimus eos consectetur eveniet saepe. Expedita, quam qui repellat ex obcaecati
+            quae animi?
+        </p>
+    </article>
+
+    <article>
+        <h3 class="title">Titre de l'article</h3>
+        <div class="detail">
+            <span>Date</span><span>Auteur</span>
+        </div>
+        <p class="content">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur harum fugiat facilis adipisci ipsam
+            odit rerum enim minus eius nihil ad expedita dolores ab cum suscipit, neque dolorum distinctio. Molestiae?
+            Temporibus possimus quas cupiditate cumque deserunt dicta in. Vero odio veniam iusto, beatae vitae quos
+            deleniti ad iure, porro cupiditate nam, esse dolorem cumque repellendus rerum deserunt incidunt velit
+            possimus!
+            Similique, pariatur dicta. Illum alias, sequi molestias, labore fugiat tempora amet cum harum, odit vitae
+            porro assumenda! Natus consectetur molestias temporibus, debitis fuga reprehenderit maxime deserunt non
+            corrupti, veritatis mollitia.
+            Fuga vero recusandae, a atque, maxime officiis odio quibusdam libero impedit alias amet tempora unde
+            necessitatibus numquam illum deleniti molestias quaerat architecto. Architecto consequuntur illo aspernatur
+            sequi magnam dolor rerum.
+            Animi sequi assumenda esse deserunt repellat temporibus tempora eius praesentium at, veniam inventore
+            mollitia eaque beatae odio ducimus eos consectetur eveniet saepe. Expedita, quam qui repellat ex obcaecati
+            quae animi?
+        </p>
+    </article>
+</div>
