--- a/front/src/app/features/create-article/create-article.component.scss
+++ b/front/src/app/features/create-article/create-article.component.scss
@@ -14,7 +14,7 @@ form {
     width: 100%;
     height: 100%;
     resize: none;
-    border-color: #7763c5;
+    border-color: v.$primary-color;
     border-width: 2px;
     border-radius: 8px;
 }
@@ -24,7 +24,7 @@ form {
 }
 
 input {
-    border-color: #7763c5;
+    border-color: v.$primary-color;
     border-width: 2px;
 }
 
