--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -40,7 +40,7 @@ button {
 }
 
 .violet-btn {
-    background-color: #7763c5;
+    background-color: v.$primary-color;
     font-size: medium;
     font-weight: bold;
     letter-spacing: 0.1rem;
@@ -50,6 +50,10 @@ button {
     padding-right: 25px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.violet {
+  color: v.$primary-color;
 }
 
 ul {
