--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .center-page {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
