--- a/front/src/app/features/layout/auth-layout/auth-layout.component.html
+++ b/front/src/app/features/layout/auth-layout/auth-layout.component.html
@@ -8,7 +8,8 @@
             <button routerLink="/article" routerLinkActive="violet" (click)="goToArticles()">Articles</button>
             <button routerLink="/theme" routerLinkActive="violet" (click)="goToThemes()">Thèmes</button>
 
-            <svg routerLink="/profil" routerLinkActive="violet" (click)="goToProfil()" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+            <svg routerLink="/profil" routerLinkActive="violet" (click)="goToProfil()"
+                xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-circle-user-icon lucide-circle-user">
                 <circle cx="12" cy="12" r="10" />
@@ -28,29 +29,30 @@
         <img (click)="goToArticles()" src="/assets/logo_p6.png" alt="logo" />
 
         <button class="burger" (click)="menuOpen = !menuOpen">
-            <span :class="{ 'open': menuOpen }"></span>
-            <span :class="{ 'open': menuOpen }"></span>
-            <span :class="{ 'open': menuOpen }"></span>
+            <span [class.open]="menuOpen"></span>
+            <span [class.open]="menuOpen"></span>
+            <span [class.open]="menuOpen"></span>
         </button>
     </nav>
 
 </header>
 
 <main class="main-container">
-    @if (menuOpen) {
+
     <!-- Arrière-plan semi-transparent -->
-    <div class="overlay" (click)="closeMenu()"></div>
+    <div [class.open]="menuOpen" class="overlay" (click)="closeMenu()"></div>
 
     <!-- Menu mobile -->
-    <nav class="mobile-menu">
+    <nav [class.open]="menuOpen" class="mobile-menu">
         <button class="close-btn" (click)="closeMenu()">✖</button>
         <ul>
-            <li><button class="logout" >Se déconnecter</button></li>
+            <li><button class="logout">Se déconnecter</button></li>
             <li><button routerLink="/article" routerLinkActive="violet" (click)="goToArticles()">Articles</button></li>
             <li><button routerLink="/theme" routerLinkActive="violet" (click)="goToThemes()">Thèmes</button></li>
         </ul>
         <div id="profil">
-            <svg routerLink="/profil" routerLinkActive="violet" (click)="goToProfil()" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+            <svg routerLink="/profil" routerLinkActive="violet" (click)="goToProfil()"
+                xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-circle-user-icon lucide-circle-user">
                 <circle cx="12" cy="12" r="10" />
@@ -59,7 +61,7 @@
             </svg>
         </div>
     </nav>
-    }
+
     <router-outlet></router-outlet>
 </main>
 }
